--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -38,28 +38,25 @@
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
                             href="../Watches Page/Watches_Page.html">Watches</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
+                            href="../Customizations Page/Customizations.html">Customer Care</a>
+                    </li>
                 </ul>
                 <a class="navbar-brand brand d-flex justify-content-center"><img
                         src="./Images/KRONOS_logo-removebg-preview-removebg-preview.png" alt="Logo" /></a>
 
-
-
                 <!--Login-->
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#LoginModal">
-                        Login
-                    </button>
-
-                    
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#LoginModal">
+                    Login
+                </button>
 
                 <!--Sign Up-->
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#SignupModal">
-                        Sign Up
-                    </button>
-
-                    
-
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#SignupModal">
+                    Sign Up
+                </button>
             </div>
             <i class="fa fa-duotone fa-cart-plus" style="font-size:3rem;"></i>
 
@@ -68,90 +65,82 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="LoginModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header text-dark bg1">
-                <h5 class="modal-title" id="LoginModalLabel">Login</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
-            </div>
-            <div class="modal-body text-dark bg1">
-                <!--Form-->
-                <form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email
-                            address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1"
-                            aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email
-                            with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me
-                            out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary"
-                        data-bs-dismiss="modal">Submit</button>
-                </form>
-            </div>
-            <div class="modal-footer text-dark bg1">
-                <button type="button" class="btn btn-secondary"
-                    data-bs-dismiss="modal">Close</button>
+    <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="LoginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-dark bg1">
+                    <h5 class="modal-title" id="LoginModalLabel">Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-dark bg1">
+                    <!--Form-->
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email
+                                address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email
+                                with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me
+                                out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
+                    </form>
+                </div>
+                <div class="modal-footer text-dark bg1">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-</div>
+    </div>
 
 
-<!-- Modal -->
-<div class="modal fade" id="SignupModal" tabindex="-1" aria-labelledby="SignupModalLabel"
-aria-hidden="true">
-<div class="modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header text-dark bg1">
-            <h5 class="modal-title" id="SignupModalLabel">Sign Up</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                aria-label="Close"></button>
-        </div>
-        <div class="modal-body text-dark bg1">
-            <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email
-                        address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail2"
-                        aria-describedby="emailHelp">
-                    <div id="emailHelp2" class="form-text">We'll never share your email
-                        with anyone else.</div>
+    <!-- Modal -->
+    <div class="modal fade" id="SignupModal" tabindex="-1" aria-labelledby="SignupModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-dark bg1">
+                    <h5 class="modal-title" id="SignupModalLabel">Sign Up</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2">
+                <div class="modal-body text-dark bg1">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email
+                                address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail2"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp2" class="form-text">We'll never share your email
+                                with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword2">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Confirm
+                                Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword3">
+                        </div>
+                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
+                    </form>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Confirm
-                        Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword3">
+                <div class="modal-footer text-dark bg1">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
-                <button type="submit" class="btn btn-primary"
-                    data-bs-dismiss="modal">Submit</button>
-            </form>
-        </div>
-        <div class="modal-footer text-dark bg1">
-            <button type="button" class="btn btn-secondary" style="background-color: blue;"
-                data-bs-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
-</div>
-</div>
-</div>
+    </div>
 
 
 
@@ -177,52 +166,24 @@ aria-hidden="true">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="Images/carousel1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/carousel2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/carousel3.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/carousel4.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/carousel5.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/carousel6.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
             </div>
             <div class="carousel-item">
                 <img src="Images/carousel7.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -324,7 +285,8 @@ aria-hidden="true">
                         </h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
-                                <img src="../IMAGES/logo.png" alt="Bootstrap" width="32" height="32">
+                                <img src="Images\KRONOS_logo-removebg-preview-removebg-preview.png" alt="Bootstrap"
+                                    width="50" height="32">
                             </li>
                         </ul>
                     </div>
@@ -338,7 +300,8 @@ aria-hidden="true">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">The Moon meets Uranus</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
-                                <img src="../IMAGES/logo.png" alt="Bootstrap" width="32" height="32">
+                                <img src="Images\KRONOS_logo-removebg-preview-removebg-preview.png" alt="Bootstrap"
+                                    width="50" height="32">
                             </li>
                         </ul>
                     </div>
@@ -352,7 +315,8 @@ aria-hidden="true">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Discover variable star R Leonis</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
-                                <img src="../IMAGES/logo.png" alt="Bootstrap" width="32" height="32">
+                                <img src="Images\KRONOS_logo-removebg-preview-removebg-preview.png" alt="Bootstrap"
+                                    width="50" height="32">
                             </li>
                         </ul>
                     </div>
